--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,2 @@
-<main>
-  <div class="section">
-    <h1>
-      Scroll down 👇
-    </h1>
-  </div>
-  <div class="container section">
-    <div class="box"></div>
-  </div>
-  <div class="section"></div>
-</main>
+
+<app-register></app-register>
