--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -74,7 +74,7 @@
               for="FirstName"
               class="block text-sm font-medium text-gray-700 dark:text-gray-200"
             >
-              First Name
+              First Name Login
             </label>
 
             <input
