--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -46,14 +46,19 @@
       <div class="flex items-center gap-4">
         <div class="sm:flex sm:gap-4">
           <a
+            routerLink="/login"
+            routerLinkActive="active" 
+            ariaCurrentWhenActive="page"
             class="rounded-md bg-teal-600 px-5 py-2.5 text-sm font-medium text-white shadow"
-            href="/"
           >
             Login
           </a>
 
           <div class="hidden sm:flex">
             <a
+              routerLink="/register"
+              routerLinkActive="active" 
+              ariaCurrentWhenActive="page"
               class="rounded-md bg-gray-100 px-5 py-2.5 text-sm font-medium text-teal-600"
               href="/"
             >
