--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -1,11 +1,3 @@
-
-<!--
-  Heads up! 👋
-
-  Plugins:
-    - @tailwindcss/forms
--->
-
 <section class="relative flex flex-wrap lg:h-screen lg:items-center">
   <div class="w-full px-4 py-12 sm:px-6 sm:py-16 lg:w-1/2 lg:px-8 lg:py-24">
     <div class="max-w-lg mx-auto text-center">
@@ -28,7 +20,10 @@
             class="w-full p-4 text-sm border-gray-200 rounded-lg shadow-sm pe-12"
             placeholder="Enter email"
           />
+          <small *ngIf="loginForm.get('email')?.touched && loginForm.get('email')?.hasError('email')" class="text-red-600">*Not a valid email</small>
+          <small *ngIf="loginForm.get('email')?.touched && loginForm.get('email')?.hasError('required')" class="text-red-600">*Email is requred</small>
 
+          <!-- <small class="text-red-600">*Not a valid email</small> -->
           <span class="absolute inset-y-0 grid px-4 end-0 place-content-center">
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -58,6 +53,7 @@
             class="w-full p-4 text-sm border-gray-200 rounded-lg shadow-sm pe-12"
             placeholder="Enter password"
           />
+          <small *ngIf="loginForm.touched && loginForm.controls.password.errors" class="text-red-500">*Password is required</small>
 
           <span class="absolute inset-y-0 grid px-4 end-0 place-content-center">
             <svg
